--- a/templates/view_grid.html
+++ b/templates/view_grid.html
@@ -7,6 +7,8 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <title>Gird</title>
     <style>
@@ -28,19 +30,38 @@
                 <label for="product">Product*</label>
                
                 <select id="product" class="form-control" name="product" >
-                    {% for product in product %}<option value="{{i.id}}" selected>{{product.name}}</option>
+                    {% for product in products %}<option value="{{ product.product }}" selected>{{product.product}}</option>
                     {% endfor %}
                 </select>
-           
+
+
             </div>
             
-            <div class="col-md-4 col-sm-12  form-group">
-                <label for="product">Vehical Type*</label>
-                <select id="product" class="form-control" name="product" >
-                    <option value="" selected>Select Vehical Type</option>
-                </select>
-            </div>
-            <div class="col-md-4 col-sm-12  form-group">
+            <div class="form-row">
+                <div class="form-group">
+                  <label for="productoptions">Product*</label>
+                  <select id="productoptions" class="form-control" name="product" >
+                      <option value="" selected>Select DepProductartment</option>
+                      {% for product in products %}
+                          <option value="{{ product.product }}">{{ product.product }}</option>
+                      {% endfor %}
+                  </select>
+              </div>
+              <div class="form-group">
+                  <label for="vehicaltypeoptions">vehicaltype***</label>
+                  <select id="vehicaltypeoptions" class="form-control" name="vehical_type" >
+                      <option value="" selected>select vehical type</option>
+                  </select>
+              </div>
+{% comment %} <div class="col-md-4 col-sm-12 form-group">
+    <label for="vehicaltypeoptions">Vehical Type*</label>
+    <select id="vehical_type" class="form-control" name="product" >
+        {% for vehical_types in vehical_types %}<option value="{{ vehical_types.vehical_type }}" selected>{{vehical_types.vehical_type}}</option>
+        {% endfor %}
+    </select>
+</div> {% endcomment %}
+
+            {% comment %} <div class="col-md-4 col-sm-12  form-group">
                 <label for="product">Vehical Sub Type*</label>
                 <select id="product" class="form-control" name="product" >
                     <option value="" selected>Select Vehical Sub Type</option>
@@ -86,7 +107,7 @@
                 <input  class="mr-2"  type="checkbox" name="Standard Rules(s)" id="">
                 <label for="product">Standard Rules(s)</label>
             </div>
-        </div>
+        </div> {% endcomment %}
         <div class="form-row">
             <div class="col-md-9 col-sm-9  offset-md-4 form-group">
                     <input class="btn btn-primary mr-2" type="button" value="Get Grid">
@@ -95,11 +116,41 @@
         </div>
         
     </form>
-
-    <!-- Optional JavaScript -->
+<!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  </body>
+
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script>
+
+
+        // category & services
+        $("#productoptions").change(function () {
+            var dept_id = $(this).val();
+
+            $.ajax({
+                url: "{% url 'grid:ajax_load_vehical_type' %}",
+                data: {
+                    'product': dept_id
+                },
+                success: function (data) {
+                    var vehicaltypeSelect = $("#vehicaltypeoptions");
+                    vehicaltypeSelect.empty();  // Clear existing options
+
+                    var vehicaltypes = data.vehical_types;
+                    for (var i = 0; i < vehicaltypes.length; i++) {
+                        vehicaltypeSelect.append(
+                            $("<option>").attr('value', vehicaltypes[i].vehical_type).text(vehicaltypes[i].vehical_type)
+                        );
+                    }
+                }
+            });
+        });
+
+
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+  
+</body>
 </html>
