--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                 <div class="mode"><i class="fa fa-moon-o"></i></div>
               </li>
               <li class="onhover-dropdown p-0">
-                <button class="btn btn-primary-light" type="button"><a href="{% url 'logout' %}"><i data-feather="log-out"></i>Log out</a></button>
+                <button class="btn btn-primary-light" type="button"><a href="{% url 'accounts:logout' %}"><i data-feather="log-out"></i>Logout</a></button>
               </li>
             </ul>
           </div>
