--- a/templates/view_grid.html
+++ b/templates/view_grid.html
@@ -39,6 +39,8 @@
     
         <form class="form theme-form >" method="POST" action="" enctype="multipart/form-data">
             {% csrf_token %}
+            <a href="#" value="{{request.user.username}}">{{request.user.username}}</a>
+            <a href="{% url 'accounts:logout' %}">logout</a>
 
             <div class="form-row">
                 <div class="col-md-4 col-sm-12 form-group">
@@ -362,17 +364,23 @@
                     for (var i = 0; i < data.results.length; i++) {
                         var result = data.results[i];
 
-                        var newRow = $("<tr>");
-                  
-                        newRow.append("<td><textarea rows='2' cols='10' class='form-control' readonly>" + result.company+ "</textarea></td>");
-                        newRow.append("<td><textarea rows='2' cols='20' class='form-control' readonly>" + result.vehical_type+ "</textarea></td>");
-                        newRow.append("<td><textarea rows='2' cols='30' class='form-control' readonly>" + result.vehical_subtype+ "</textarea></td>");       
-                        newRow.append("<td><textarea rows='2' cols='50' class='form-control' readonly>" + result.remarks + "</textarea></td>"); 
-                        {% comment %} newRow.append("<td><input type='text' class='form-control' value='" + result.rate + "' readonly></td>"); {% endcomment %}
-                        newRow.append("<td><input type='text' class='form-control' value='" + result.agent_payout + "' readonly></td>");
                         
-
-                        tableBody.append(newRow);
+                        var newRow = $("<tr>");
+                            newRow.append("<td><textarea rows='2' cols='10' class='form-control' readonly>" + result.company + "</textarea></td>");
+                            newRow.append("<td><textarea rows='2' cols='20' class='form-control' readonly>" + result.vehical_type + "</textarea></td>");
+                            newRow.append("<td><textarea rows='2' cols='30' class='form-control' readonly>" + result.vehical_subtype + "</textarea></td>");
+                            newRow.append("<td><textarea rows='2' cols='50' class='form-control' readonly>" + result.remarks + "</textarea></td>");
+        
+                            if ('{{request.user.username}}' === 'user1') {
+                                newRow.append("<td><input type='text' class='form-control' value='" + result.rateuser1 + "' readonly></td>");
+                            } else if ('{{request.user.username}}' === 'user2') {
+                                newRow.append("<td><input type='text' class='form-control' value='" + result.rateuser2 + "' readonly></td>");
+                            } else {
+                                // Handle other user types or default behavior
+                                
+                            }
+        
+                            tableBody.append(newRow);
                     }
                 }
             });
