logout back disabal

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
     <meta name="description" content="Payout Grid">
     <meta name="keywords" content="Payout Grid">
     <meta name="author" content="Payout Grid">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
     <link rel="icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
     <link rel="shortcut icon" href="{% static 'images/favicon.png' %}" type="image/x-icon">
     <title>Payout Grid</title>
