--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,24 @@
+
 {% extends 'base.html' %}
 {% load static  %}
 
 {% block content %}
 
+<div class="container-fluid">
+  <div class="card-header" style="background: #0c7097; color:white;" >
+    Welcome to Grid Payout</div> 
+  <div class="row">
+    <!-- Zero Configuration  Starts-->
+    <div class="col-sm-12">
+      <div class="card">
+
+          ****************
 
 
-  <h3>Welcome to Grid Payout</h3>
-  <div class="container-fluid general-widget">
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
