--- a/templates/report_grid.html
+++ b/templates/report_grid.html
@@ -1,12 +1,29 @@
 {% extends 'base.html' %}
 {% load static  %}
-{% block script %}
 
-{% endblock script %}
 {% block content %}
-<div class="container-fluid general-widget">
-    <h1>Grid Report</h1>
+
+<div class="container-fluid">
+  <div class="card-header" style="background: #0c7097; color:white;" >
+    Report</div> 
+  <div class="row">
+    <!-- Zero Configuration  Starts-->
+    <div class="col-sm-12">
+      <div class="card">
+
+          ****************
+
+
+      </div>
+    </div>
+  </div>
 </div>
 
-{% endblock %}
 
+
+    
+  </div>
+
+
+
+{% endblock %}
