--- a/templates/update_grid.html
+++ b/templates/update_grid.html
@@ -1,18 +1,10 @@
 {% extends 'base.html' %}
 {% load static  %}
-
-
+   
 
 {% block content %}
-<div class="container-fluid general-widget">
-    <div class="card-header" style="background: #0c7097; color:white;">
-        Update Grid
-    </div>
-
-    <div class="card">
-        <div class="col-sm-12">
-            <div class="card">
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+<!-- Model Pop up starts-->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog" role="document">
                         <div class="modal-content">
@@ -34,19 +26,22 @@
                         </div>
                     </div>
                 </div>
-                <div class="container-fluid">
-                    <div class="row">
-                      <!-- Zero Configuration  Starts-->
-                      <div class="col-sm-12">
-                <div class="card-header pb-0">
-                    <h5>Scrolling DataTable</h5>
-                </div>
-                <div class="card-body">
-                    <div class="dt-ext table-responsive">
-                        <table class="display" id="scrolling-datatable">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
+                <!--Model Pop up end-->
+<!-- Container-fluid starts-->
+          <div class="container-fluid">
+            <div class="card-header" style="background: #0c7097; color:white;" >
+                Update Grid</div> 
+            <div class="row">
+              <!-- Zero Configuration  Starts-->
+              <div class="col-sm-12">
+                <div class="card">
+                 
+                  <div class="card-body">
+                    <div class="table-responsive">
+                      <table class="display" id="basic-1">
+                        <thead>
+                          <tr>
+                            <th>ID</th>
                                     <th>Company</th>
                                     <th>Product</th>
                                     <th>Vehical Type</th>
@@ -55,15 +50,17 @@
                                     <th>Month</th>
                                     <th>State</th>
                                     <th>RTO</th>
-                                    <th>Rate</th>
-                                    <th>Agent Payout</th>
+                                    <th>Company Rate</th>
+                                    <th>Agent Payout 70 %</th>
+                                    <th>Agent Payout 80 %</th>
+                                    <th>Agent Payout 90 %</th>
                                     <th>Remarks</th>
                                     <th>Created On</th>
                                     <th>Edit</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for i in data %}
+                          </tr>
+                        </thead>
+                        <tbody>
+                           {% for i in data %}
                                 <tr class="edit-field">
                                     <td class="id-field">{{i.id}}</td>
                                     <td>{{i.company}}</td>
@@ -75,7 +72,9 @@
                                     <td>{{i.state}}</td>
                                     <td>{{i.rto}}</td>
                                     <td class="rate-field">{{i.rate}}</td>
-                                    <td>{{i.agent_payout}}</td>
+                                    <td>{{i.rateuser1}}</td>
+                                    <td>{{i.rateuser2}}</td>
+                                    <td>{{i.rateuser3}}</td>
                                     <td>{{i.remarks}}</td>
                                     <td>{{i.created_on|date:"d-M-y"}}</td>
                                     <td>
@@ -84,103 +83,91 @@
                                     </td>
                                 </tr>
                                 {% endfor %}
-                            </tbody>
-                            <tfoot>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Company</th>
-                                    <th>Product</th>
-                                    <th>Vehical Type</th>
-                                    <th>Vehical SubType</th>
-                                    <th>Product Name</th>
-                                    <th>Month</th>
-                                    <th>State</th>
-                                    <th>RTO</th>
-                                    <th>Rate</th>
-                                    <th>Agent Payout</th>
-                                    <th>Remarks</th>
-                                    <th>Created On</th>
-                                    <th>Edit</th>
-                                </tr>
-                            </tfoot>
-                        </table>
-                <div>
+                          
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Zero Configuration  Ends-->
+              <!-- Feature Unable /Disable Order Starts-->
+              
+              
+             
+              
+              <!-- DOM positioning Ends-->
+              <!-- Flexible table width Starts-->
+              
+            </div>
+          </div>
+          <!-- Container-fluid Ends-->
         </div>
-    </div>
-</div>
-</div>
-
-{% endblock %}
-
-
-
-{% block script %}
-<!-- jQuery -->
-<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-<!-- Bootstrap JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function () {
-        // Add an event listener to the "Simple" buttons
-        var simpleButtons = document.querySelectorAll('.btn-primary');
-        simpleButtons.forEach(function (button) {
-            button.addEventListener('click', function (event) {
-                event.preventDefault();
-
-                // Get the data from the selected row
-                var row = this.closest('tr');
-                var id = row.querySelector('.id-field').innerText;
-                var rate = row.querySelector('.rate-field').innerText;
-
-                // Populate the modal input fields
-                document.getElementById('idInput').value = id;
-                document.getElementById('rateInput').value = rate;
-
-                // Show the modal
-                $('#exampleModal').modal('show');
+        <!-- footer start-->
+        {% endblock content%} 
+    <!-- login js-->
+    <!-- Plugin used-->
+    {% block script %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Add an event listener to the "Simple" buttons
+            var simpleButtons = document.querySelectorAll('.btn-primary');
+            simpleButtons.forEach(function (button) {
+                button.addEventListener('click', function (event) {
+                    event.preventDefault();
+    
+                    // Get the data from the selected row
+                    var row = this.closest('tr');
+                    var id = row.querySelector('.id-field').innerText;
+                    var rate = row.querySelector('.rate-field').innerText;
+    
+                    // Populate the modal input fields
+                    document.getElementById('idInput').value = id;
+                    document.getElementById('rateInput').value = rate;
+    
+                    // Show the modal
+                    $('#exampleModal').modal('show');
+                });
             });
-        });
-
-        // Add New Ifsc
-        $("#modalbutton").click(function (ev) {
-            var id = $('#idInput').val();
-            var rate = $('#rateInput').val();
-
-            $.ajax({
-                type: 'GET',
-                url: "{% url 'grid:ajax_addrate' %}",
-                data: {
-                    'id': id,
-                    'addrate': rate,
-                },
-                success: function (response) {
-                    if (response.status === 'success') {
-                        // Handle success
-                        console.log(response);
-
-                        // Update the rate in the table
-                        let cell = $('.id-field:contains(' + response.data.id + ')');
-                        let row = cell.closest('tr');
-                        row.find('.rate-field').text(response.data.rate);
-
-                        // Hide the modal
-                        $('#exampleModal').modal('hide');
-
-                        // Redirect to 'grid:update_rate'
-                       window.location.href = "{% url 'grid:update_grid' %}?id=" + response.data.id; 
-                    } else {
+    
+            // Add New Ifsc
+            $("#modalbutton").click(function (ev) {
+                var id = $('#idInput').val();
+                var rate = $('#rateInput').val();
+    
+                $.ajax({
+                    type: 'GET',
+                    url: "{% url 'grid:ajax_addrate' %}",
+                    data: {
+                        'id': id,
+                        'addrate': rate,
+                    },
+                    success: function (response) {
+                        if (response.status === 'success') {
+                            // Handle success
+                            console.log(response);
+    
+                            // Update the rate in the table
+                            let cell = $('.id-field:contains(' + response.data.id + ')');
+                            let row = cell.closest('tr');
+                            row.find('.rate-field').text(response.data.rate);
+    
+                            // Hide the modal
+                            $('#exampleModal').modal('hide');
+    
+                            // Redirect to 'grid:update_rate'
+                           window.location.href = "{% url 'grid:update_grid' %}?id=" + response.data.id; 
+                        } else {
+                            // Handle errors
+                            console.log(response.message);
+                        }
+                    },
+                    error: function (response) {
                         // Handle errors
-                        console.log(response.message);
+                        console.log(response);
                     }
-                },
-                error: function (response) {
-                    // Handle errors
-                    console.log(response);
-                }
+                });
             });
         });
-    });
-</script>
-{% endblock script %}
-
+    </script>
+    {% endblock script %}
