made the small changes to accurate navigate

--- a/templates/view_grid.html
+++ b/templates/view_grid.html
@@ -113,12 +113,12 @@
             <table id="ratetable" class="table table-hover mb-2">
                 <thead class="table-active">
                     <tr>
-                        <th>Company</th>
-                        <th>vehical_type</th>
-                       <th>Vehicle Subtype</th>
-                        <th>Remarks</th>
+                        <th style="background: #0c7097; color:white;">Company</th>
+                        <th style="background: #0c7097; color:white;">vehical_type</th>
+                       <th style="background: #0c7097; color:white;">Vehicle Subtype</th>
+                        <th style="background: #0c7097; color:white;">Remarks</th>
                         {% comment %} <th>Rate</th> {% endcomment %}
-                        <th>Point</th>
+                        <th style="background: #0c7097; color:white;">Point</th>
                     </tr>
                 </thead>
                 <tbody>
