--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -66,7 +66,7 @@
                                     </p>
                                 </div>
                                 {% endif %}
-                            <h4>Login for user 1 2 3</h4>
+                            <h4>Login</h4>
                             <h6>Welcome back! Log in to your account.</h6>
                             <div class="form-group">
                                 <label for="id_username">Username</label>
