register login done as per rateuser

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,7 +114,9 @@
                   <li class=""><a class="nav-link " href="{% url 'grid:update_grid' %}"><i data-feather="layout"></i><span>View Grid</span></a>
                    
                   </li>
+                  <li class=""><a class="nav-link " href="{% url 'grid:user_list' %}"><i data-feather="file-text"></i><span>User</span></a>
                   
+                  </li>
 
                   <li class=""><a class="nav-link " href="{% url 'grid:report_grid' %}"><i data-feather="file-text"></i><span>Report</span></a>
                   
